--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "support-chat"
-  , "version": "0.0.1"
-  , "author" : "Fabrizio Codello"
-  , "engines" : {
-    "node" : ">=0.4.12"
-  }
-  , "private": true
-  , "dependencies": {
-      "express": "2.4.3"
-    , "socket.io" : ">=0.8.4"
+  "name": "support-chat",
+  "version": "0.0.1-3",
+  "author": "Fabrizio Codello",
+  "engines": {
+    "node": "0.6.7"
+  },
+  "private": true,
+  "dependencies": {
+    "express": "2.5.6",
+    "socket.io": "0.8.7"
+  },
+  "subdomain": "support-chat",
+  "scripts": {
+    "start": "server.js"
   }
 }
