--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "support-chat",
-  "version": "0.0.1-3",
+  "version": "0.0.2",
   "author": "Fabrizio Codello",
   "engines": {
-    "node": "0.6.7"
+    "node": "0.6.x"
   },
   "private": true,
   "dependencies": {
-    "express": "2.5.6",
-    "socket.io": "0.8.7"
+    "express": "3.1.x",
+    "socket.io": "0.9.x"
   },
-  "subdomain": "support-chat",
   "scripts": {
-    "start": "server.js"
-  }
+    "start": "node server.js"
+  },
+  "license": "MIT"
 }
