--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "author": "Fabrizio Codello",
   "engines": {
-    "node": "0.6.x"
+    "node": "6.11.1"
   },
   "private": true,
   "dependencies": {
